# SNAP

./: .gitignore  README.md  pyproject.toml  snap_entrypoints.py  train-mace-mp-0.py
SNAP.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
uncertainty_quantification/: README.md  extract_env.py  extract_mace_embeddings.py  extract_uma_embeddings.py  gbm.py  quantile-prediction.py  run-gbm.py  run_embeddings_mace.py  run_embeddings_uma.py  screen_sites.py  structure-selection.py  train-gbm.py
wrap/calc/: uncertainty.py
wrap/data/: __init__.py  data.py  mace.py
wrap/nn/: loss.py  macemp.py
wrap/nn/mace/calculators/: foundations_models.py
